--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.11.0",
+    "async": "^3.2.3",
     "cloudinary": "^1.23.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
@@ -28,12 +29,14 @@
     "mongodb": "^4.4.1",
     "mongodb-autoincrement": "^1.0.1",
     "mongoose": "^5.13.14",
+    "mongoose-populate": "^3.0.3",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.15",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.3.0",
+    "popup": "^0.0.3",
     "sanitize-html": "^2.7.0"
   }
 }
