--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "mongoose-populate": "^3.0.3",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
